[package]
name = "vulkan-testing-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cgmath = "0.18.0"
log = "0.4.21"
png = "0.17.13"
pretty_env_logger = "0.5.0"
thiserror = "1.0.61"
tobj = "4.0.2"
vulkanalia = { version="=0.23.0", features = ["libloading", "provisional", "window"] } 
winit = "0.29"
